Fix missing Nav Bar on mobile using dynamic viewport height (dvh)

--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ html {
     position: relative;
     width: 100%;
     height: 100vh;
+    /* Fallback */
+    height: 100dvh;
     overflow: hidden;
 }
 
@@ -80,6 +82,8 @@ html {
     left: 0;
     width: 100%;
     height: calc(100vh - (var(--gap) + var(--bar-height) + var(--gap)) * 2);
+    /* Fallback */
+    height: calc(100dvh - (var(--gap) + var(--bar-height) + var(--gap)) * 2);
     display: flex;
     flex-direction: row;
     align-items: stretch;
